@@ -356,6 +356,27 @@ sub parse_FPGetSrvrInfo()
 			my ($utf8name) = extract(1, $utf8_name_offset+1, @packet);
 			print "UTF8 Servername: $utf8name\n";
 		}
+		$offset +=2;
+	}
+
+	if ($flags & (1<<12)) { # Undocumented Bit12
+		# looks like a SPNEGNO negTokenInit blob with the extensions from MS-SPNG
+		# <http://download.microsoft.com/download/9/5/E/95EF66AF-9026-4BB0-A41D-A4F81802D92C/[MS-SPNG].pdf>
+		# <https://tools.ietf.org/html/rfc4178#section-4.2.1>
+		my ($gss_uam_spnego_blob_offset) = unpack("n2", @packet[$offset] . @packet[$offset+1]);
+		print "GSS-UAM SPNEGO blob offset: $gss_uam_spnego_blob_offset\n" if ($main::debug);
+		if ($gss_uam_spnego_blob_offset)
+		{
+			# the leading 4-bytes mean length maybe...
+			my ($gss_uam_spnego_blob_len) = unpack("N2",
+				@packet[$gss_uam_spnego_blob_offset] . @packet[$gss_uam_spnego_blob_offset+1] .
+				@packet[$gss_uam_spnego_blob_offset+2] . @packet[$gss_uam_spnego_blob_offset+3]);
+			my ($gss_uam_spnego_blob) = join("",
+				@packet[$gss_uam_spnego_blob_offset+4..$gss_uam_spnego_blob_offset+4+$gss_uam_spnego_blob_len-1]);
+			print "GSS-UAM SPNEGO blob length: $gss_uam_spnego_blob_len\n" if ($main::debug);
+			print "GSS-UAM SPNEGO blob (Undocumented):\n";
+			hexdump($gss_uam_spnego_blob);
+		}
 	}
 
 	draw_icon($icon_offset, @packet) if ($main::show_icon && $icon_offset);
@@ -482,9 +503,9 @@ sub parse_afp_flags
 	push (@flags, "    SupportsUTF8Servername") if ($flags & (1<<9));
 	push (@flags, "    SupportsUUIDs") if ($flags & (1<<10));
 	push (@flags, "    SupportsExtSleep") if ($flags & (1<<11));
-	push (@flags, "    UnknownBit12") if ($flags & (1<<12));
-	push (@flags, "    UnknownBit13") if ($flags & (1<<13));
-	push (@flags, "    UnknownBit14") if ($flags & (1<<14));
+	push (@flags, "    Undocumented Bit12 (Supports GSS-UAM SPNEGO blob)") if ($flags & (1<<12));
+	push (@flags, "    Undocumented Bit13") if ($flags & (1<<13));
+	push (@flags, "    Undocumented Bit14") if ($flags & (1<<14));
 	push (@flags, "    SupportsSuperClient") if ($flags & (1<<15));
 
 	return @flags;
